# Letterguessd

./: README.md  app.js  history.json  index.html  movie_data.json  pyproject.toml  schedule.yml  scraper.py  style.css
.github/workflows/: scrape.yml  test.yml
tests/: test_scraper.py  test_ui.py
